Product sets - Fixed a issue with swatches overlapping the availability callout, fixed alignment of the "Add to basket" buttons
Close jackjonesfashion/tasks#94, close jackjonesfashion/tasks#95

--- a/src/static_files/styles/jack-jones.styl
+++ b/src/static_files/styles/jack-jones.styl
@@ -46,7 +46,7 @@
 			margin-bottom 60px
 			
 
-/* Outfit PDP */
+// Outfit PDP
 #branded.pt_productdetails .product_set
 	.grid_16
 	.productsetdetail
@@ -63,6 +63,22 @@
 			
 		.product_set_image img
 			margin 20px 0
+			
+		.variationattributes .swatches ul.swatchesdisplay
+			width 240px
+			
+		.availability
+			text-align right
+			width 190px
+			color orange
+			
+			p
+				font-size 11px
+			
+	.addtocartbar .addtocartbutton
+		margin-top -25px
+		position absolute
+		right 0
 
 #branded.pt_productdetails .productset
 	#subProduct2Div
